Minor bug fixes
Addressed issue with the horizontal scroll bar on the home page. Changed background image width from
`100vw` to `100%`

.flex-center class will now have `!important` next to `display: flex` to ensure that the flex item is centered

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -222,7 +222,7 @@
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   box-shadow: inset 0 0 0 100vw rgba(0,0,0,0.35);
 }
