--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,7 @@ mat-dialog-container {
 }
 
 .flex-center {
-  display: flex;
+  display: flex !important;
   justify-content: center;
   align-content: center;
   align-items: center;
